--- a/vibez.html
+++ b/vibez.html
@@ -74,6 +74,36 @@
     <br />
     <div class="video-flex">
       <iframe
+      width="450"
+      height="245"
+      src="https://www.youtube.com/embed/UZfaIx57UqU"
+      title="YouTube video player"
+      frameborder="0"
+      allowfullscreen
+      >
+      </iframe>
+
+      <iframe
+      width="450"
+      height="245"
+      src="https://www.youtube.com/embed/b0DU5uhoq-4"
+      title="YouTube video player"
+      frameborder="0"
+      allowfullscreen
+      >
+      </iframe>
+
+      <iframe
+      width="450"
+      height="245"
+      src="https://www.youtube.com/embed/eTwQ4kACymM"
+      title="YouTube video player"
+      frameborder="0"
+      allowfullscreen
+      >
+      </iframe>
+
+      <iframe
         width="450"
         height="245"
         src="https://www.youtube.com/embed/rb9QodBfOrg"
