--- a/vibez.html
+++ b/vibez.html
@@ -73,7 +73,7 @@
     </header>
     <br />
     <div class="video-flex">
-      <iframe
+      <!-- <iframe
       width="450"
       height="245"
       src="https://www.youtube.com/embed/UZfaIx57UqU"
@@ -91,7 +91,7 @@
       frameborder="0"
       allowfullscreen
       >
-      </iframe>
+      </iframe> -->
 
       <iframe
       width="450"
