updated a few things
updated button hover and active
removed animation for sub-titles

--- a/party.html
+++ b/party.html
@@ -49,15 +49,17 @@
   
     </div>
   </div>
-    <header>
-        <h1 class="animate__animated animate__backInLeft animate__delay-0s toptitle">&#128526 &#127911;</h1>
-        <navbar class="return">
-            <ul class="goback">
-            <a href="index.html"> 
-                <button class="button animate__animated animate__backInRight animate__delay-0s">&Ll; Go Back</button></a>
-        </ul>
-        </navbar>
-    </header>
+  <h1 class="toptitle">
+    &#x1F49B; &#127911;
+  </h1>
+      <a class="goback" href="index.html">
+        <button
+          class="button"
+        >
+          &Ll; Go Back
+        </button></a
+      >
+</header>
     <br>
     <div class="video-flex">
         <iframe width="450" height="245" src="https://www.youtube.com/embed/k6OPMcoiHl8" 
