--- a/viet2.html
+++ b/viet2.html
@@ -56,20 +56,16 @@
     </div>
   </div>
     <header>
-      <h1 class="animate__animated animate__backInLeft animate__delay-0s toptitle">
-        Trang &#8545; &#127911;
+      <h1 class="toptitle">
+        &#x1F49B; &#127911;
       </h1>
-      <navbar class="return">
-        <ul class="goback">
-          <a href="index.html">
+          <a class="goback" href="index.html">
             <button
-              class="button animate__animated animate__backInRight animate__delay-0s"
+              class="button"
             >
               &Ll; Go Back
             </button></a
           >
-        </ul>
-      </navbar>
     </header>
     <br />
     <div class="video-flex">
