--- a/vi3t.html
+++ b/vi3t.html
@@ -56,21 +56,18 @@
 
   </div>
 </div>
-      <h1 class="animate__animated animate__backInLeft animate__delay-0s toptitle">
-        Việt &#127911;
-      </h1>
-      <navbar class="return">
-        <ul class="goback">
-          <a href="index.html">
-            <button
-              class="button animate__animated animate__backInRight animate__delay-0s"
-            >
-              &Ll; Go Back
-            </button></a
-          >
-        </ul>
-      </navbar>
-    </header>
+<header>
+<h1 class="toptitle">
+  &#x1F49B; &#127911;
+</h1>
+    <a class="goback" href="index.html">
+      <button
+        class="button"
+      >
+        &Ll; Go Back
+      </button></a
+    >
+</header>
     <br />
     <div class="video-flex">
       <iframe
