--- a/viet3.html
+++ b/viet3.html
@@ -55,21 +55,17 @@
   
     </div>
   </div>
-    <header>
-      <h1 class="animate__animated animate__backInLeft animate__delay-0s toptitle">
-        Trang &#8546; &#127911;
-      </h1>
-      <navbar class="return">
-        <ul class="goback">
-          <a href="index.html">
-            <button
-              class="button animate__animated animate__backInRight animate__delay-0s"
-            >
-              &Ll; Go Back
-            </button></a
+  <header>
+    <h1 class="toptitle">
+      &#x1F49B; &#127911;
+    </h1>
+        <a class="goback" href="index.html">
+          <button
+            class="button"
           >
-        </ul>
-      </navbar>
+            &Ll; Go Back
+          </button></a
+        >
     </header>
     <br />
     <div class="video-flex">
