--- a/work.html
+++ b/work.html
@@ -50,17 +50,19 @@
   
     </div>
   </div>
-    <header>
-        <h1 class="animate__animated animate__backInLeft animate__delay-0s toptitle">日本 &#127911;</h1>
-        <navbar class="return">
-            <ul class="goback">
-            <a href="index.html"> 
-                <button class="button animate__animated animate__backInRight animate__delay-0s">&Ll; Go Back</button></a>
-        </ul>
-        </navbar>
+  <header>
+    <h1 class="toptitle">
+      &#x1F49B; &#127911;
+    </h1>
+        <a class="goback" href="index.html">
+          <button
+            class="button"
+          >
+            &Ll; Go Back
+          </button></a
+        >
     </header>
     <br>
-
     <div class="video-flex">
         <iframe width="450" height="245" src="https://www.youtube.com/embed/WtVZACxeUxs" 
         title="YouTube video player" frameborder="0" 
