updated a few minor things
corrected title names for each categories

--- a/vi3t.html
+++ b/vi3t.html
@@ -58,7 +58,7 @@
 </div>
 <header>
 <h1 class="toptitle">
-  &#x1F49B; &#127911;
+  Việt &#127911;
 </h1>
     <a class="goback" href="index.html">
       <button
