--- a/lofi.html
+++ b/lofi.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <title>&#128522 &#127911;</title>
+    <title>&#128522; &#127911;</title>
     <link rel="stylesheet" href="CSS/projectstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="Favicon/favicon.ico"/>
@@ -51,7 +51,7 @@
   </div>
   <header>
     <h1 class="toptitle">
-      &#x1F49B; &#127911;
+      &#128522; &#127911;
     </h1>
         <a class="goback" href="index.html">
           <button
