--- a/viet2.html
+++ b/viet2.html
@@ -57,7 +57,7 @@
   </div>
     <header>
       <h1 class="toptitle">
-        &#x1F49B; &#127911;
+        Trang &#8544;&#8544; &#127911;
       </h1>
           <a class="goback" href="index.html">
             <button
