--- a/vibez.html
+++ b/vibez.html
@@ -15,64 +15,83 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="shortcut icon" type="image/x-icon" href="Favicon/favicon.ico" />
-    <link rel="apple-touch-icon" href="Favicon/FMLapple-touch-icon.png"/>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
+    <link rel="apple-touch-icon" href="Favicon/FMLapple-touch-icon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/code.jquery.com_mobile_1.4.2_jquery.mobile-1.4.2.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   </head>
-  <body>
-    <div id="preloader">
-    </div>
-    <div id="topbar">
-    <div class="container">
-      <div class="subcontainer">
-        <nav class="navbar">
-        <a href="https://johnnyphotography.netlify.app/" class="nav-branding"> <img class="bullhead" src="/Favicon/FMLapple-touch-icon.png"alt=""></a>
-        <ul class="nav-menu">
-          <li class="nav-item"> 
-            <a href="https://johnnyle.netlify.app" class="nav-link"><span class="home fa fa-home"></span></a>
-          </li>
-      <li class="nav-item"> 
-        <a href="https://www.instagram.com/johnny.aio" class="nav-link" target="_blank" ><span class="fab fa-instagram"></span> johnny.aio</a>
-      </li>
+  <body >
+      <div id="topbar">
+        <div class="container">
+          <div class="subcontainer">
+            <nav class="navbar">
+              <a class="nav-branding" onclick="myFunction()" href="#"
+                ><span class="johnny">johnny</span
+                ><img
+                  class="bullhead"
+                  src="/Favicon/FMLapple-touch-icon.png"
+                  alt=""
+              /></a>
+              <ul class="nav-menu">
+                <li class="nav-item">
+                  <a href="https://johnnyle.netlify.app" class="nav-link"
+                    ><span class="home fa fa-home"></span
+                  ></a>
+                </li>
 
-      <li class="nav-item"><a href="https://phimbo.netlify.app/" class="nav-link"> <span class="icon youtube fab fa-youtube"></span>
-        phimbo.netlify.app</a>
-      </li>
-      
-      <li class="nav-item">
-        <a href="https://johnnynews.netlify.app/" class="nav-link"><span class="fas fa-globe"></span> johnnynews.netlify.app</a>
-        
-      </li>
-        </ul>
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
+                <li class="nav-item">
+                  <a href="https://johnnynews.netlify.app/" class="nav-link"
+                    ><span class="fas fa-globe"></span> News</a
+                  >
+                </li>
+
+                <li class="nav-item">
+                  <a href="https://phimbo.netlify.app/" class="nav-link">
+                    <span class="icon youtube fab fa-youtube"></span> PhimBộ</a
+                  >
+                </li>
+
+                <li class="nav-item">
+                  <a
+                    href="https://www.instagram.com/johnny.aio"
+                    class="nav-link"
+                    target="_blank"
+                    ><span class="fab fa-instagram"></span> johnny.aio</a
+                  >
+                </li>
+              </ul>
+              <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+              </div>
+            </nav>
+          </div>
         </div>
-        </nav>
+        <script src="/JavaScript/script.js"></script>
       </div>
     </div>
-    <script src="/JavaScript/script.js"></script>
-  
-    </div>
-  </div>
-  <header>
-    <h1 class="toptitle">
-      &#x1F49B; &#127911;
-    </h1>
-        <a class="goback" href="index.html">
-          <button
-            class="button"
-          >
-            &Ll; Go Back
-          </button></a
-        >
+    <header>
+      <div class="astrodivider">
+        <div class="astrodividermask"></div>
+        <span></span>
+      </div>
+      <h1 class="toptitle">&#x1F49B; &#127911;</h1>
+        <button style="margin: 0 auto;" onclick="location.href='https://johnnyphotography.netlify.app/index'" class="goback">&Ll; Go Back</button>
     </header>
     <br />
     <div class="video-flex">
-      <!-- <iframe
+      <iframe
       width="450"
       height="245"
-      src="https://www.youtube.com/embed/UZfaIx57UqU"
+      src="https://www.youtube.com/embed/p_M5bxnM-CM?si=zA_pMBVsSmBUZEC_"
       title="YouTube video player"
       frameborder="0"
       allowfullscreen
@@ -82,20 +101,20 @@
       <iframe
       width="450"
       height="245"
-      src="https://www.youtube.com/embed/b0DU5uhoq-4"
+      src="https://www.youtube.com/embed/5g3HOrGEJfQ"
       title="YouTube video player"
       frameborder="0"
       allowfullscreen
       >
-      </iframe> -->
+      </iframe>
 
       <iframe
-      width="450"
-      height="245"
-      src="https://www.youtube.com/embed/t4RFYeVUkGc"
-      title="YouTube video player"
-      frameborder="0"
-      allowfullscreen
+        width="450"
+        height="245"
+        src="https://www.youtube.com/embed/qB0HDGxjnZI"
+        title="YouTube video player"
+        frameborder="0"
+        allowfullscreen
       >
       </iframe>
 
