--- a/bluejayschamps.html
+++ b/bluejayschamps.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WonderCastle</title>
+    <title>Blue Jays Champ</title>
     <link rel="stylesheet" href="CSS/projectstyle.css" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet"> -->
   </head>
