--- a/bluejaysglove.html
+++ b/bluejaysglove.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WonderCastle</title>
+    <title>Blue Jays Glove</title>
     <link rel="stylesheet" href="CSS/projectstyle.css" />
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet"> -->
   </head>
   <body>
     <header>
@@ -29,12 +28,5 @@
         class="full-image"
       />
     </div>
-    <!-- <div>
-        <p class="nft">NFT version of this photo available <a class="nft-link" href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/62538496575886630473350156527604275603961924396113105160169430220615903608833">here</a></p>
-        </div>
-    
-        <footer>
-            Created by <a class="nft-link" href="https://opensea.io/johnny--nft">johnny--nft</a>
-        </footer> -->
   </body>
 </html>
