--- a/party.html
+++ b/party.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="Favicon/favicon.ico"/>
     <link rel="apple-touch-icon" href="Favicon/FMLapple-touch-icon.png"/>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
+    <link rel="stylesheet" type="text/css" href="/code.jquery.com_mobile_1.4.2_jquery.mobile-1.4.2.min.css">
   </head>
   <body>
     <div id="preloader">
@@ -19,24 +20,26 @@
     <div class="container">
       <div class="subcontainer">
         <nav class="navbar">
-        <a href="https://johnnyphotography.netlify.app/" class="nav-branding"> <img class="bullhead" src="/Favicon/FMLapple-touch-icon.png"alt=""></a>
-        <ul class="nav-menu">
-          <li class="nav-item"> 
-            <a href="https://johnnyle.netlify.app" class="nav-link"><span class="home fa fa-home"></span></a>
-          </li>
-      <li class="nav-item"> 
-        <a href="https://www.instagram.com/johnny.aio" class="nav-link" target="_blank" ><span class="fab fa-instagram"></span> johnny.aio</a>
-      </li>
-
-      <li class="nav-item"><a href="https://phimbo.netlify.app/" class="nav-link"> <span class="icon youtube fab fa-youtube"></span>
-        phimbo.netlify.app</a>
-      </li>
-      
-      <li class="nav-item">
-        <a href="https://johnnynews.netlify.app/" class="nav-link"><span class="fas fa-globe"></span> johnnynews.netlify.app</a>
-        
-      </li>
-        </ul>
+          <a class="nav-branding"onclick=myFunction() href="#"><span class="johnny">johnny</span><img class="bullhead" src="/Favicon/FMLapple-touch-icon.png"alt=""></a>
+          <ul class="nav-menu">
+  
+            <li class="nav-item"> 
+              <a href="https://johnnyle.netlify.app" class="nav-link"><span class="home fa fa-home"></span></a>
+            </li>
+  
+            <li class="nav-item">
+              <a href="https://johnnynews.netlify.app/" class="nav-link"><span class="fas fa-globe"></span> News</a>
+            </li>
+  
+            <li class="nav-item"><a href="https://phimbo.netlify.app/" class="nav-link"> <span class="icon youtube fab fa-youtube"></span>
+              PhimBộ</a>
+            </li>
+  
+            <li class="nav-item"> 
+              <a href="https://www.instagram.com/johnny.aio" class="nav-link" target="_blank" ><span class="fab fa-instagram"></span> johnny.aio</a>
+            </li>
+  
+          </ul>
         <div class="hamburger">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -49,16 +52,11 @@
   
     </div>
   </div>
+  <div class="astrodivider"><div class="astrodividermask"></div><span></span></div>
   <h1 class="toptitle">
     &#128526; &#127911;
   </h1>
-      <a class="goback" href="index.html">
-        <button
-          class="button"
-        >
-          &Ll; Go Back
-        </button></a
-      >
+  <button style="margin: 0 auto;" onclick="location.href='https://johnnyphotography.netlify.app/index'" class="button goback">&Ll; Go Back</button>
 </header>
     <br>
     <div class="video-flex">
