--- a/pcupgrade4.html
+++ b/pcupgrade4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blue Jays Hat</title>
+    <title>PC Upgrade 4</title>
     <link rel="stylesheet" href="CSS/projectstyle.css" />
   </head>
   <body>
@@ -21,10 +21,10 @@
     </header>
     <div class="flex">
       <img
-        src="Media/bluejayshat.jpg"
-        alt="bluejayshat"
-        width="60%"
-        height="60%"
+        src="Media/thermalpaste.jpg"
+        alt=""
+        width="30%"
+        height="30%"
         class="full-image"
       />
     </div>
