--- a/sleep.html
+++ b/sleep.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <title>放松 &#127911;</title>
+    <title>中国 &#127911;</title>
     <link rel="stylesheet" href="CSS/projectstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="Favicon/favicon.ico"/>
     <link rel="apple-touch-icon" href="Favicon/FMLapple-touch-icon.png"/>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
+    <link rel="stylesheet" type="text/css" href="/code.jquery.com_mobile_1.4.2_jquery.mobile-1.4.2.min.css">
   </head>
   <body>
     <div id="preloader">
@@ -19,23 +20,25 @@
     <div class="container">
       <div class="subcontainer">
         <nav class="navbar">
-        <a href="https://johnnyphotography.netlify.app/" class="nav-branding"> <img class="bullhead" src="/Favicon/FMLapple-touch-icon.png"alt=""></a>
+          <a class="nav-branding"onclick=myFunction() href="#"><span class="johnny">johnny</span><img class="bullhead" src="/Favicon/FMLapple-touch-icon.png"alt=""></a>
         <ul class="nav-menu">
+
           <li class="nav-item"> 
             <a href="https://johnnyle.netlify.app" class="nav-link"><span class="home fa fa-home"></span></a>
           </li>
-      <li class="nav-item"> 
-        <a href="https://www.instagram.com/johnny.aio" class="nav-link" target="_blank" ><span class="fab fa-instagram"></span> johnny.aio</a>
-      </li>
 
-      <li class="nav-item"><a href="https://phimbo.netlify.app/" class="nav-link"> <span class="icon youtube fab fa-youtube"></span>
-        phimbo.netlify.app</a>
-      </li>
-      
-      <li class="nav-item">
-        <a href="https://johnnynews.netlify.app/" class="nav-link"><span class="fas fa-globe"></span> johnnynews.netlify.app</a>
-        
-      </li>
+          <li class="nav-item">
+            <a href="https://johnnynews.netlify.app/" class="nav-link"><span class="fas fa-globe"></span> News</a>
+          </li>
+
+          <li class="nav-item"><a href="https://phimbo.netlify.app/" class="nav-link"> <span class="icon youtube fab fa-youtube"></span>
+            PhimBộ</a>
+          </li>
+
+          <li class="nav-item"> 
+            <a href="https://www.instagram.com/johnny.aio" class="nav-link" target="_blank" ><span class="fab fa-instagram"></span> johnny.aio</a>
+          </li>
+
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
@@ -50,32 +53,16 @@
     </div>
   </div>
   <header>
+    <div class="astrodivider"><div class="astrodividermask"></div><span></span></div>
     <h1 class="toptitle">
-       放松 &#127911;
+      中国 &#127911;
     </h1>
-        <a class="goback" href="index.html">
-          <button
-            class="button"
-          >
-            &Ll; Go Back
-          </button></a
-        >
+    <button style="margin: 0 auto;" onclick="location.href='https://johnnyphotography.netlify.app/index'" class="button goback">&Ll; Go Back</button>
     </header>
     <br>
     <div class="video-flex">
-        <iframe width="450" height="245" src="https://www.youtube.com/embed/hR3sK0_nNGA" 
-        title="YouTube video player" frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-        </iframe>
 
-        <iframe width="450" height="245" src="https://www.youtube.com/embed/CsWGV26HhwA" 
-        title="YouTube video player" frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-        </iframe>
-
-        <iframe width="450" height="245" src="https://www.youtube.com/embed/_XL0ug_LCdI" 
+        <iframe width="450" height="245" src="https://www.youtube.com/embed/t4RFYeVUkGc" 
         title="YouTube video player" frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
